# root-finder

./: .gitignore  README.md  setup.cfg
root_finder/: __init__.py  exception.py
root_finder/model/: abstract.py  basic.py
tests/: test_model.py
